--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/harvesthub
-JWT_SECRET=your_jwt_secret_here
+MONGO_URI=mongodb+srv://harvest:harvest%40xyz@cluster4.zikpvd9.mongodb.net/harvesthub?retryWrites=true&w=majority
+
 PORT=5000
