--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,10 @@ services:
   # Backend Service
   - type: web
     name: harvest-hub-backend
-    env: node
+    runtime: node
     region: singapore
     plan: free
+    rootDir: server
     buildCommand: npm install
     startCommand: npm start
     envVars:
@@ -16,16 +17,16 @@ services:
         value: production
       - key: PORT
         value: 10000
-    healthCheckPath: /api/products
 
   # Frontend Service
   - type: web
     name: harvest-hub-frontend
-    env: static
+    runtime: static
     region: singapore
     plan: free
-    buildCommand: cd client && npm install && npm run build
-    staticPublishPath: ./client/dist
+    rootDir: client
+    buildCommand: npm install && npm run build
+    staticPublishPath: dist
     envVars:
       - key: VITE_API_URL
         fromService:
